# dmlist

./: .gitignore  CMakeLists.txt  Makefile  README.md  manifest.dmm
.github/workflows/: ci.yml  release.yml
include/: dmlist.h
src/: dmlist.c
tests/: CMakeLists.txt  dmod_stubs.c  test_simple.c
